--- a/convicatorias/lunarte.html
+++ b/convicatorias/lunarte.html
@@ -350,6 +350,7 @@
 
 <!--Formulariot-->
 
+
 <div class="container">
 
     <div class="row">
@@ -425,7 +426,7 @@
         <label for="validationCustom05" class="form-label">Tipo de proponente</label>
         <select class="form-select" id="validationCustom04" required>
           <option selected disabled value=""></option>
-          <option>Persona naturañ</option>
+          <option>Persona natural</option>
           <option>Persona juridica</option>
           <option>Grupo constituido</option>
         </select>
@@ -443,6 +444,30 @@
 </div>
 
  
+
+<!--Grupo constituido-->
+
+
+<div class="col-md-4">
+  <label for="validationCustom05" class="form-label">Postgrado con titulo relacionado con arte y cultura:</label>
+  <input type="text" class="form-control" placeholder="Título alcanzado" id="validationCustom05" required>
+  <div class="invalid-feedback">
+    Barrio por favor.
+  </div>
+</div>
+
+
+<form class="d-flex p-3 m-5">
+  <input class="form-control me-2" type="search" placeholder="Buscar mienbros del grupo" aria-label="Search">
+  <button class="btn btn-outline-success" type="submit">Search</button>
+</form>
+
+<fieldset disabled>
+  <div class="mb-3">
+    <label for="disabledTextInput" class="form-label">Integrantes</label>
+    <input type="text" id="disabledTextInput" class="form-control" placeholder="Gabriel">
+  </div>
+</fieldset>
 
 </body>
 
