--- a/inscripcion/index.html
+++ b/inscripcion/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
-  <link rel="stylesheet" type="text/css" href="../assets/css/styleSass.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/styleSass.css">
   <title>SICC</title>
 </head>
 
@@ -746,7 +746,9 @@
         </div>
       </div>
 
-      
+      <div class="col-12 pt-5">
+        <button class="btn btn-primary" type="submit">Enviar</button>
+      </div>
 
 
 
