--- a/sicc.html
+++ b/sicc.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
-    <link rel="stylesheet" type="text/css" href="./assets/css/styleSass.css">
+    <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/styleSass.css">
     <title>SICC</title>
 </head>
 
@@ -41,7 +41,7 @@
            
             <ul class="list-group flex-column d-inline-block submenu svg-submenu">
               <li class="list-group-item">
-                <a href="/index.html">
+                <a href="index.html">
               <img src="https://res.cloudinary.com/dt9b7pad3/image/upload/v1495404616/Pages_axm9as.svg" height="32" width="40" class="ml-2 mr-4 d-inline-block">
                   <div class="text d-inline-block align-middle">
             Home-Page
