--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-    <link rel="stylesheet" type="text/css" href="/assets/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
 </head>
 
 <body>
@@ -58,7 +58,7 @@
         <div class="row p-5">
 
             <div class="col">
-                <img src="./assets/img/Logo consejo de Cultura_Logo CMCC.png" id="logoh">
+                <img src="assets/img/Logo consejo de Cultura_Logo CMCC.png" id="logoh">
                 <h1></h1>
             </div>
             <!--Login-->
@@ -73,14 +73,14 @@
                                 <div class="px-5 ms-xl-4">
                                     <i class="fas fa-crow fa-2x me-3 pt-5 mt-xl-4" style="color: #709085;"></i>
                                     <span class="h1 fw-bold mb-0"><img
-                                            src="./assets/img/Logo consejo de Cultura_Logo SMCC.png" id="n2" /></span>
+                                            src="assets/img/Logo consejo de Cultura_Logo SMCC.png" id="n2" /></span>
                                 </div>
 
                                 <div
                                     class="d-flex align-items-center h-custom-2 px-5 ms-xl-4 mt-3 pt-3 pt-xl-0 mt-xl-n3">
 
                                     <form style="width: 20rem;">
-                                        <p>No tienes cuenta? <a href="/inscripcion/index.html" class="link-info">Inscribete aqui</a></p>
+                                        <p>No tienes cuenta? <a href="inscripcion/index.html" class="link-info">Inscribete aqui</a></p>
                                         <h3 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Ingresar</h3>
 
                                         <div class="form-outline mb-4">
@@ -195,13 +195,14 @@
                     </d>
                 </div>
                 <div id="location">
-                    <h5>¿DONDE ESTAMOS?</h5>
+                    <h3>¿DONDE ESTAMOS?</h3>
                     <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7952.923011379788!2d-74.09393437783707!3d4.689577879324716!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f9b3cd83dc501%3A0x3711d6966928af95!2zQm9uYW56YSwgRW5nYXRpdsOhLCBCb2dvdMOh!5e0!3m2!1ses-419!2sco!4v1643402985648!5m2!1ses-419!2sco"
-                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    < src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3975.4471575262264!2d-74.05804198474941!3d4.864491741568843!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f878af1b55ca7%3A0xd82fff4ee29a35c9!2sCasa%20De%20La%20Cultura%20De%20Chia!5e0!3m2!1ses!2sco!4v1651366086294!5m2!1ses!2sco"
+                     width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+                    </iframe>
                 </div>
                 <div class="info">
-                    <h5>Desarrollado por Juan David</h5>
+                    <h3>Desarrollado por Juan David</h3>
                     <p>
                         <img src="./img/html5-badge-h-css3-graphics-multimedia-performance-semantics.png"
                             alt="Creado HTML y CSS">
