--- a/inscripcion/index.html
+++ b/inscripcion/index.html
@@ -749,7 +749,10 @@
       <div class="col-12 pt-5">
         <button class="btn btn-primary" type="submit">Enviar</button>
       </div>
-
+      <!--Área artística y cultura-->
+      <div class="row">
+        <h4>Línea de Área</h4>
+      </div>
 
 
 
